# spin

./: Cargo.toml
crates/outbound-dynamodb/: Cargo.toml
crates/outbound-dynamodb/src/: lib.rs
