[package]
name = "outbound-dynamodb"
version = "0.2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
aws-sdk-dynamodb = "0.15.0"
aws-config = "0.15.0"
aws-types = { version = "0.15.0", features = ["hardcoded-credentials"] }
aws-smithy-http = "0.45.0"
aws-smithy-types = "0.38.0"
spin-engine = { path = "../engine" }
spin-manifest = { path = "../manifest" }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dde4694aaa6acf9370206527a798ac4ba6a8c5b8" }
